<resources>
    <string name="app_name">KongaClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="enter_mobile_number_or_email">Enter mobile number or email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="close">close</string>
    <string name="mobile_number_or_email">Mobile Number or Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>