<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="23dp"
    tools:context=".RegisterFragment">


    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="#2E3333"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/first_name"
        android:textColor="#000000"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_edittext"
        android:maxLines="1"
        app:hintEnabled="false"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColorHint="#B0B0B0"
            android:textColor="@color/black"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/last_name"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_edittext"
        app:hintEnabled="false"
        android:maxLines="1"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#B0B0B0"
            android:textColor="@color/black"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_address"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_edittext"
        app:hintEnabled="false"
        android:maxLines="1"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="#B0B0B0"
            android:textColor="@color/black"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_edittext"
        app:hintEnabled="false"
        android:maxLines="1"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#B0B0B0"
            android:textColor="@color/black"
            android:hint="@string/phone_number"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/bg_edittext"
        app:hintEnabled="false"
        android:maxLines="1"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#B0B0B0"
            android:textColor="@color/black"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="23dp"
        android:backgroundTint="#ED017F"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="3dp"
        app:iconTint="@color/black" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_gravity="center"
      android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/already_have_an_account"
          android:textColor="#DE111820"
          android:textSize="14sp" />

      <Space
          android:layout_width="8dp"
          android:layout_height="wrap_content" />

      <TextView
          android:id="@+id/loginTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/login"
          android:textColor="#ED017F"
          android:textSize="14sp" />

  </LinearLayout>


</LinearLayout>